# lab-06

./: CMakeLists.txt  README.md
.github/workflows/: bin.yml  cpack.yml
_build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  install_manifest.txt  main-1.0.1-Linux.sh
_build/_CPack_Packages/Linux/TZ/: main-1.0.1-Linux.tar.Z
_build/formatter_ex_lib/: Makefile
_build/formatter_lib/: Makefile
_build/hello_world_application/: Makefile  cmake_install.cmake
_build/solver_application/: Makefile  cmake_install.cmake
_build/solver_lib/: Makefile
formatter_ex_lib/: CMakeLists.txt  Makefile  cmake_install.cmake
formatter_lib/: .CMakeLists.txt.swp  CMakeLists.txt  Makefile  cmake_install.cmake
hello_world_application/: CMakeLists.txt  Makefile
solver_application/: CMakeLists.txt  Makefile  cmake_install.cmake
solver_lib/: CMakeLists.txt  Makefile  cmake_install.cmake  solver.cpp
